# space-shooter

./: README.md  pyproject.toml
.github/workflows/: update-game.yml
src/gh_space_shooter/: __init__.py  cli.py  constants.py  github_client.py
src/gh_space_shooter/game/: __init__.py  animator.py  game_state.py  renderer.py
src/gh_space_shooter/game/strategies/: __init__.py  base_strategy.py  column_strategy.py
